--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 </div>
 <p align="center" style="font-size: x-large;"><i><b>Github Activeness</b></i></p>
 
-<p><img align="left" src="https://github-readme-stats.vercel.app/api/top-langs?username=SahilSunda&show_icons=true&locale=en&layout=compact&theme=chartreuse-dark" alt="" style="width:45%;"/></p>
+<p><img align="left" src="https://wakatime.com/share/@SahilSunda/f165e854-2eeb-434e-992d-65c167f00899.svg" alt="" style="width:45%;"/></p>
 
 <p>&nbsp;<img align="right" src="https://github-readme-stats.vercel.app/api?username=SahilSunda&show_icons=true&locale=en&theme=chartreuse-dark" alt="" width=53% /></p>
 <br><br><br><br><br><br><br>
 <hr>
-<p><img src="https://github-readme-stats.vercel.app/api/wakatime?username=SahilSunda" alt="" width="70%"/></p>
+<p><img src="https://wakatime.com/share/@SahilSunda/a3b5be11-9329-4a4e-9399-b16f14c83b61.svg" alt="" width="70%"/></p>
 
 <br><br><br>
 <br>
