--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <a href="https://www.facebook.com/profile.php?id=100013441119502" target="blank"><img align="center" src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="fb_sahil" height="30" width="40" /></a>
   <a href = "mailto: sahilsundaiit@gmail.com"><img align="center" src="https://seeklogo.com/images/G/gmail-new-2020-logo-32DBE11BB4-seeklogo.com.png" height="30" width="40" /></a>
   </p>
-  <p align="center"><em>Hello, I am Sahil, <b>second year</b> undergraduate from <a href="https://www.iitk.ac.in/"> <b>IIT Kanpur</b></a>. <br>
-      <b>a passionate self-learner</b> <img src="https://github.com/TheDudeThatCode/TheDudeThatCode/blob/master/Assets/Developer.gif" width="30px"> 
+  <p align="center"><em>Hello, I am Sahil, <b>Junior Undergraduate</b> from <a href="https://www.iitk.ac.in/"> <b>IIT Kanpur</b></a>. <br>
+      <b>a passionate self-learner</b> <img src="https://raw.githubusercontent.com/TheDudeThatCode/TheDudeThatCode/master/Assets/Developer.gif" width="30px"> 
     </em> 
     <br>
     <img src="https://media.giphy.com/media/gH3LO09IOiZIqePwv9/giphy.gif" width="50" /><b><i align="center">"Life is full of choices…choose wisely!”</i></b> <img src="https://media.giphy.com/media/qjqUcgIyRjsl2/giphy.gif" width="50" />
@@ -46,7 +46,7 @@
     <p align="center"">
     <img src=" https://img.shields.io/badge/Age-19-blue" style="width: 10%;" />
     <img src="https://img.shields.io/badge/College-IIT%20Kanpur-blue" style="width: 22.5%;" />
-    <img src="https://img.shields.io/badge/Lives-India-blue" style="width: 15%;" />
+    <img src="https://img.shields.io/badge/Country-India-blue" style="width: 15%;" />
     </p>
   </p><br>
 </div>
