--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <img src="https://media.giphy.com/media/iY8CRBdQXODJSCERIr/giphy.gif"  width="30px">&nbsp; <b style="font-size: x-large;">ABOUT ME</b>
   <br><br><b>
   ✔ 
-  ✔ Ongoing Projects & Internship : </b><br><b><br>* Crop Diesase Detection using Machine Learning <br>* Software Developer Intern at Geowiz Consultancy <br>* Data Analysis in Criminal Justice <br>* SPO App Development </b><br><br>
+  ✔ Completed Projects & Internship : </b><br><b><br>* Crop Diesase Detection using Machine Learning <br>* Software Developer Intern at Geowiz Consultancy <br>* Software Developer Intern at Betalectic IT Projects Ltd <br>* Data Analysis in Criminal Justice <br>* SPO App Development <br>* Web Developer Intern at TRPWS </b><br><br>
   ✔ I’m looking to collaborate with any **Open - Source projects**<br><br><br><br>
   </div>
 </div>
