--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             <span class="text-primary">Sahil Sunda</span>
           </h1>
           <div class="subheading mb-5">
-            Average student of some college 😂
+            Field Sports Guy
             <br />
+            Volleyball is ♥
             <a
               style="text-transform: lowercase"
               href="mailto:sahilsundaiit@gmail.com"
@@ -232,7 +233,6 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">IIT Kanpur</h3>
               <div class="subheading mb-3">B.Tech, Mechanical Engineering</div>
-              <p>GPA: 7.24</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">August 2019 - May 2023</span>
@@ -244,7 +244,6 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Dundlod Public School</h3>
               <div class="subheading mb-3">Secondary Education</div>
-              <p>GPA: 10</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">May 2008 - Apr 2017</span>
