--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#views">Views</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -344,6 +347,11 @@
             </div>
           </div>
         </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Views-->
+      <section class="resume-section" id="views">
+        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g"></script>
       </section>
     </div>
     <!-- Bootstrap core JS-->
