--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
       <hr class="m-0" />
       <!-- Views-->
       <section class="resume-section" id="views">
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g'></script>
         <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g&cl=ffffff&w=a"></script>
       </section>
     </div>
