--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#views">Views</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -350,10 +347,9 @@
       </section>
       <hr class="m-0" />
       <!-- Views-->
-      <section class="resume-section" id="views">
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g'></script>
-        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g&cl=ffffff&w=a"></script>
-      </section>
+      <div class="map_widget" id="map">
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g'></script>
+      </div>
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
