--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
       <hr class="m-0" />
       <!-- Views-->
       <div class="map_widget" id="map">
-        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g'></script>
+        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=590&t=tt&d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g'></script>
+        <h3>second</h3>
+        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=m&d=vBKVve6-UI-vcAnWM0qIIPk2tB4G9sifyS1pOZO9g_g&co=2d78ad&cmo=ff5353&cmn=3acc3a&ct=ffffff"></script>
       </div>
     </div>
     <!-- Bootstrap core JS-->
