--- a/index.html
+++ b/index.html
@@ -345,12 +345,8 @@
           </div>
         </div>
       </section>
-      <hr class="m-0" />
-      <!-- Views-->
-      <div class="map_widget" id="map">
-        <a href="http://www.clustrmaps.com/map/Sahilsunda.github.io" title="Visit tracker for Sahilsunda.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g" /></a>
-      </div>
     </div>
+    <a href="#" title="Visit Tracker"><img src="https://clustrmaps.com/map_v2.png?d=8iiKG3A2SDT5jKzgwTLeZGdd_TS1qQhrTkjAXi7hC6g"/></a>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
