--- a/index.html
+++ b/index.html
@@ -262,6 +262,17 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
+              <h3 class="mb-0">Rajat Vidyapeeth School</h3>
+              <div class="subheading mb-3">Senior Secondary Education</div>
+            </div>
+            <div class="flex-shrink-0">
+              <span class="text-primary">May 2017 - Apr 2019</span>
+            </div>
+          </div>
+          <div
+            class="d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="flex-grow-1">
               <h3 class="mb-0">Dundlod Public School</h3>
               <div class="subheading mb-3">Secondary Education</div>
             </div>
@@ -316,7 +327,8 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0">MICROSOFT CYBERSECURITY ENGAGE'22</h3>
+              <h3 class="mb-0"><a href="https://drive.google.com/file/d/1IcXwLP7BiNQHFAXuk3D7etaarRmUhGlU/view?usp=sharing">MICROSOFT CYBERSECURITY ENGAGE</a></h3>
+              <br>
               <ul>
                 <li>Learnt industry-relevant Cybersecurity skills from professionals of Microsoft.
                 </li>
@@ -333,7 +345,8 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0"><a href="">STOCK PRICE PREDICTION</a></h3>
+              <h3 class="mb-0"><a href="https://github.com/SahilSunda/Stock-Price-Prediction">STOCK PRICE PREDICTION</a></h3>
+              <br>
               <ul>
                 <li>Aim of the project was to use Machine Learning models to predict a company’s stock price.
                 </li>
@@ -407,7 +420,8 @@
             class="d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="flex-grow-1">
-              <h3 class="mb-0"><a href="">COVID-19 TWEETS SENTIMENT ANALYSIS</a></h3>
+              <h3 class="mb-0"><a href="https://github.com/SahilSunda/Covid19-Tweets-Sentiment-Analysis">COVID-19 TWEETS SENTIMENT ANALYSIS</a></h3>
+              <br>
               <ul>
                 <li>
                   Aim of the project was to classify a dataset containing approximately 179,100 tweets with 13 different features as positive, negative or neutral.
